# QDax_bench

./: .gitignore  README.md  bbob_plots.ipynb  main.py  pyproject.toml  requirements.txt  setup.py
apptainer/: base.def  container.def
configs/: config.yaml
configs/algo/: me.yaml
configs/hydra/: hpc_basic.yaml  hpc_launcher.yaml
configs/task/: antmaze.yaml  debug_brax.yaml  halfcheetah.yaml  kh_pointmaze.yaml  walker_2d.yaml
qdax_bench/: main_func.py  set_config.py
qdax_bench/configs/: config.yaml
qdax_bench/configs/algo/: default_qd.yaml  dyjedi.yaml  jedi.yaml  me.yaml  pga_me.yaml
qdax_bench/configs/hydra/: all_bbob.yaml  debug.yaml  hpc_launcher.yaml  local.yaml
qdax_bench/configs/task/: antmaze.yaml  brax.yaml  brax_base.yaml  debug.yaml  kh_base.yaml  kh_snake.yaml  kh_standard.yaml  walker_2d.yaml
qdax_bench/configs/task/brax/: antmaze.yaml  halfcheetah.yaml  walker_2d.yaml
qdax_bench/configs/task/debug/: debug_brax.yaml  debug_kh.yaml
qdax_bench/configs/task/kheperax/: pointmaze.yaml  snake.yaml  standard.yaml
qdax_bench/configs/task/optim/: arm.yaml  bbob.yaml  esa.yaml  function.yaml
qdax_bench/factories/: jedi.py  me.py  pga_me.py
qdax_bench/tasks/bbob/: README.md  bbob.py  bbob_noise.py
qdax_bench/utils/: environments.py  loggers.py  plotting.py  setup.py  setup_bbob.py  setup_control.py  setup_optim.py
